# fly_tensorflow

./: .gitignore  pyproject.toml
fly4tf/: main.py
fly4tf/inference_graph/: labelmap.pbtxt
fly4tf/utils/: image_processing.py  label_map_util.py  visualization_utils2.py
fly4tf/utils/color_recognition_module/: color_histogram_feature_extraction.py  color_recognition_api.py  knn_classifier.py
fly4tf/utils/object_counting_module/: object_counter.py  object_counter_x_axis.py
tests/: test_fly4tf.py
