[tool.poetry]
name = "fly4tf"
version = "0.1.0"
description = ""
authors = ["d.malinin <d.malinin@i-teco.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.0"
opencv-python = "^4.4.0"
matplotlib = "^3.3.1"
ray = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
